displaying cards on clicking hit button

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
 
             <div class="game-area">
-                <div class="user-board"><h3>You: <span id="player-score">0</span></h3></div>
-                <div class="computer-board"><h3>Dealer: <span id="dealer-score">0</span></h3></div>
+                <div class="user-board" id="playerBoard"><h3>You: <span id="player-score">0</span></h3></div>
+                <div class="computer-board" id="computerBoard"><h3>Dealer: <span id="dealer-score">0</span></h3></div>
             </div>
 
             <div class="game-buttons-wrapper">
