adding winner and losers texts and sounds

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="black-jack-wrapper">
             <div class="description">
                 <h2>Challenge 6: Black Jack</h2>
-                <h6><span>Let's Play</span></h6>
+                <h6><span id="showResult">Let's Play</span></h6>
             </div>
 
             <div class="game-area">
